--- a/project/心跳信号分类预测.ipynb
+++ b/project/心跳信号分类预测.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>heartbeat_signals</th>\n      <th>label</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>0.9912297987616655,0.9435330436439665,0.764677...</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>0.9714822034884503,0.9289687459588268,0.572932...</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>1.0,0.9591487564065292,0.7013782792997189,0.23...</td>\n      <td>2.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>0.9757952826275774,0.9340884687738161,0.659636...</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>0.0,0.055816398940721094,0.26129357194994196,0...</td>\n      <td>2.0</td>\n    </tr>\n    <tr>\n      <th>99995</th>\n      <td>99995</td>\n      <td>1.0,0.677705342021188,0.22239242747868546,0.25...</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>99996</th>\n      <td>99996</td>\n      <td>0.9268571578157265,0.9063471198026871,0.636993...</td>\n      <td>2.0</td>\n    </tr>\n    <tr>\n      <th>99997</th>\n      <td>99997</td>\n      <td>0.9258351628306013,0.5873839035878395,0.633226...</td>\n      <td>3.0</td>\n    </tr>\n    <tr>\n      <th>99998</th>\n      <td>99998</td>\n      <td>1.0,0.9947621698382489,0.8297017704865509,0.45...</td>\n      <td>2.0</td>\n    </tr>\n    <tr>\n      <th>99999</th>\n      <td>99999</td>\n      <td>0.9259994004527861,0.916476635326053,0.4042900...</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 2
     }
    ],
    "source": [
@@ -111,7 +111,7 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -134,13 +134,13 @@
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 3
     }
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 4
     }
    ],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 5
     }
    ],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>t0</th>\n      <th>t1</th>\n      <th>t2</th>\n      <th>t3</th>\n      <th>t4</th>\n      <th>t5</th>\n      <th>t6</th>\n      <th>t7</th>\n      <th>t8</th>\n      <th>...</th>\n      <th>t196</th>\n      <th>t197</th>\n      <th>t198</th>\n      <th>t199</th>\n      <th>t200</th>\n      <th>t201</th>\n      <th>t202</th>\n      <th>t203</th>\n      <th>t204</th>\n      <th>label</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.0</td>\n      <td>0.991211</td>\n      <td>0.943359</td>\n      <td>0.764648</td>\n      <td>0.618652</td>\n      <td>0.379639</td>\n      <td>0.190796</td>\n      <td>0.040222</td>\n      <td>0.026001</td>\n      <td>0.031708</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1.0</td>\n      <td>0.971680</td>\n      <td>0.929199</td>\n      <td>0.572754</td>\n      <td>0.178467</td>\n      <td>0.122986</td>\n      <td>0.132324</td>\n      <td>0.094421</td>\n      <td>0.089600</td>\n      <td>0.030487</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2.0</td>\n      <td>1.000000</td>\n      <td>0.958984</td>\n      <td>0.701172</td>\n      <td>0.231812</td>\n      <td>0.000000</td>\n      <td>0.080688</td>\n      <td>0.128418</td>\n      <td>0.187500</td>\n      <td>0.280762</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>2.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3.0</td>\n      <td>0.975586</td>\n      <td>0.934082</td>\n      <td>0.659668</td>\n      <td>0.249878</td>\n      <td>0.237061</td>\n      <td>0.281494</td>\n      <td>0.249878</td>\n      <td>0.249878</td>\n      <td>0.241455</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4.0</td>\n      <td>0.000000</td>\n      <td>0.055817</td>\n      <td>0.261230</td>\n      <td>0.359863</td>\n      <td>0.433105</td>\n      <td>0.453613</td>\n      <td>0.499023</td>\n      <td>0.542969</td>\n      <td>0.616699</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>2.0</td>\n    </tr>\n    <tr>\n      <th>99995</th>\n      <td>99995.0</td>\n      <td>1.000000</td>\n      <td>0.677734</td>\n      <td>0.222412</td>\n      <td>0.257080</td>\n      <td>0.204712</td>\n      <td>0.054657</td>\n      <td>0.026154</td>\n      <td>0.118164</td>\n      <td>0.244873</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>99996</th>\n      <td>99996.0</td>\n      <td>0.926758</td>\n      <td>0.906250</td>\n      <td>0.637207</td>\n      <td>0.415039</td>\n      <td>0.374756</td>\n      <td>0.382568</td>\n      <td>0.358887</td>\n      <td>0.341309</td>\n      <td>0.336426</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>2.0</td>\n    </tr>\n    <tr>\n      <th>99997</th>\n      <td>99997.0</td>\n      <td>0.925781</td>\n      <td>0.587402</td>\n      <td>0.633301</td>\n      <td>0.632324</td>\n      <td>0.639160</td>\n      <td>0.614258</td>\n      <td>0.599121</td>\n      <td>0.517578</td>\n      <td>0.403809</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>3.0</td>\n    </tr>\n    <tr>\n      <th>99998</th>\n      <td>99998.0</td>\n      <td>1.000000</td>\n      <td>0.994629</td>\n      <td>0.829590</td>\n      <td>0.458252</td>\n      <td>0.264160</td>\n      <td>0.240234</td>\n      <td>0.213745</td>\n      <td>0.189331</td>\n      <td>0.203857</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>2.0</td>\n    </tr>\n    <tr>\n      <th>99999</th>\n      <td>99999.0</td>\n      <td>0.925781</td>\n      <td>0.916504</td>\n      <td>0.404297</td>\n      <td>0.000000</td>\n      <td>0.262939</td>\n      <td>0.385498</td>\n      <td>0.361084</td>\n      <td>0.332764</td>\n      <td>0.339844</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>10 rows × 207 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 7
     }
    ],
    "source": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>t0</th>\n      <th>t1</th>\n      <th>t2</th>\n      <th>t3</th>\n      <th>t4</th>\n      <th>t5</th>\n      <th>t6</th>\n      <th>t7</th>\n      <th>t8</th>\n      <th>t9</th>\n      <th>...</th>\n      <th>t195</th>\n      <th>t196</th>\n      <th>t197</th>\n      <th>t198</th>\n      <th>t199</th>\n      <th>t200</th>\n      <th>t201</th>\n      <th>t202</th>\n      <th>t203</th>\n      <th>t204</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.991211</td>\n      <td>0.943359</td>\n      <td>0.764648</td>\n      <td>0.618652</td>\n      <td>0.379639</td>\n      <td>0.190796</td>\n      <td>0.040222</td>\n      <td>0.026001</td>\n      <td>0.031708</td>\n      <td>0.065552</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0.971680</td>\n      <td>0.929199</td>\n      <td>0.572754</td>\n      <td>0.178467</td>\n      <td>0.122986</td>\n      <td>0.132324</td>\n      <td>0.094421</td>\n      <td>0.089600</td>\n      <td>0.030487</td>\n      <td>0.040497</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1.000000</td>\n      <td>0.958984</td>\n      <td>0.701172</td>\n      <td>0.231812</td>\n      <td>0.000000</td>\n      <td>0.080688</td>\n      <td>0.128418</td>\n      <td>0.187500</td>\n      <td>0.280762</td>\n      <td>0.328369</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0.975586</td>\n      <td>0.934082</td>\n      <td>0.659668</td>\n      <td>0.249878</td>\n      <td>0.237061</td>\n      <td>0.281494</td>\n      <td>0.249878</td>\n      <td>0.249878</td>\n      <td>0.241455</td>\n      <td>0.230713</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0.000000</td>\n      <td>0.055817</td>\n      <td>0.261230</td>\n      <td>0.359863</td>\n      <td>0.433105</td>\n      <td>0.453613</td>\n      <td>0.499023</td>\n      <td>0.542969</td>\n      <td>0.616699</td>\n      <td>0.676758</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>99995</th>\n      <td>1.000000</td>\n      <td>0.677734</td>\n      <td>0.222412</td>\n      <td>0.257080</td>\n      <td>0.204712</td>\n      <td>0.054657</td>\n      <td>0.026154</td>\n      <td>0.118164</td>\n      <td>0.244873</td>\n      <td>0.328857</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>99996</th>\n      <td>0.926758</td>\n      <td>0.906250</td>\n      <td>0.637207</td>\n      <td>0.415039</td>\n      <td>0.374756</td>\n      <td>0.382568</td>\n      <td>0.358887</td>\n      <td>0.341309</td>\n      <td>0.336426</td>\n      <td>0.317139</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>99997</th>\n      <td>0.925781</td>\n      <td>0.587402</td>\n      <td>0.633301</td>\n      <td>0.632324</td>\n      <td>0.639160</td>\n      <td>0.614258</td>\n      <td>0.599121</td>\n      <td>0.517578</td>\n      <td>0.403809</td>\n      <td>0.253174</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>99998</th>\n      <td>1.000000</td>\n      <td>0.994629</td>\n      <td>0.829590</td>\n      <td>0.458252</td>\n      <td>0.264160</td>\n      <td>0.240234</td>\n      <td>0.213745</td>\n      <td>0.189331</td>\n      <td>0.203857</td>\n      <td>0.210815</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>99999</th>\n      <td>0.925781</td>\n      <td>0.916504</td>\n      <td>0.404297</td>\n      <td>0.000000</td>\n      <td>0.262939</td>\n      <td>0.385498</td>\n      <td>0.361084</td>\n      <td>0.332764</td>\n      <td>0.339844</td>\n      <td>0.350586</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>100000 rows × 205 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 8
     }
    ],
    "source": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,22 +479,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "准确率均值: 0.946 方差：0.010\n"
+      "准确率均值: 0.945 方差：0.016\n"
      ]
     }
    ],
    "source": [
     "# 随机森林\n",
     "rfc_model=RandomForestClassifier()\n",
-    "cv=RepeatedStratifiedKFold(n_splits=10,n_repeats=3,random_state=1)\n",
-    "rfc_scores=cross_val_score(rfc_model, feature_train, label_train, scoring='accuracy', cv=cv, n_jobs=-1, error_score='raise')\n",
+    "rfc_scores=cross_val_score(rfc_model,feature_train,label_train,cv=10)\n",
     "print('准确率均值: %.3f 方差：%.3f' % (np.mean(rfc_scores), np.std(rfc_scores)))"
    ]
   },
@@ -607,10 +606,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "准确率均值: 0.950 方差：0.014\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 确定最终模型\n",
+    "rfc=RandomForestClassifier(n_estimators=72,max_features=30,random_state=90)\n",
+    "cv=RepeatedStratifiedKFold(n_splits=10,n_repeats=3,random_state=1)\n",
+    "rfc_scores=cross_val_score(rfc,feature_train,label_train,cv=10)\n",
+    "print('准确率均值: %.3f 方差：%.3f' % (np.mean(rfc_scores), np.std(rfc_scores)))"
+   ]
   }
  ]
 }
