--- a/project/赛题分析.md
+++ b/project/赛题分析.md
@@ -55,6 +55,8 @@
 
 尝试在一个分类问题中找到一个较优的元分类器
 
+SVM支持向量机，一般用于二分类模型，支持线性可分和非线性划分。SVM中用到的核函数有线性核'linear'、多项式核函数pkf以及高斯核函数rbf。当训练数据线性可分时，一般用线性核函数，直接实现可分；当训练数据不可分时，需要使用核技巧，将训练数据映射到另一个高维空间，使再高维空间中，数据可线性划分，但需要注意的是，若样本n和特征m很大时，且特征m>>n时，需要用线性核函数，因为此时考虑高斯核函数的映射后空间维数更高，更复杂，也容易过拟合，此时使用高斯核函数的弊大于利，选择使用线性核会更好；若样本n一般大小，特征m较小，此时进行高斯核函数映射后，不仅能够实现将原训练数据再高维空间中实现线性划分，而且计算方面不会有很大的消耗，因此利大于弊，适合用高斯核函数；若样本n很大，但特征m较小，同样难以避免计算复杂的问题，因此会更多考虑线性核。
+
 2000条数据跑了43分钟才出结果，实际效果和一层决策树的AdaBoost一致，并不是很优
 
 ![adaboost2](D:\大二下\机器学习\machine-learning\project\adaboost2.jpg)
@@ -77,7 +79,7 @@
 
 #### 最终选择随机森林算法
 
-1.  PCA 会进行降维操作，这可以减少随机森林要处理的特征数量，因此 PCA 可能有助于加快随机森林模型的训练速度。计算成本高是随机森林的最大缺点之一，如果只想简单地拥有最佳性能的模型，并且可以牺牲解释特征的重要性，那么 PCA 可能会很有用，但这并不是必须的，如果能
+1.  PCA 会进行降维操作，这可以减少随机森林要处理的特征数量，因此 PCA 可能有助于加快随机森林模型的训练速度。计算成本高是随机森林的最大缺点之一，如果只想简单地拥有最佳性能的模型，并且可以牺牲解释特征的重要性，那么 PCA 可能会很有用，但这并不是必须的
 2.  以SVM为元分类器的AdaBoost算法准确率不高的原因可能是在创建元分类器时没有对特征进行标准化处理，应用SVM需要进行标准化，但树形结构不用
 3.  后续对模型进行超参数调优，进一步提高分类准确率
 
@@ -92,6 +94,10 @@
 ##### 模型太复杂或者太简单，都会让泛化误差高，我们追求的是位于中间的平衡点
 
 ##### max_depth，min_samples_leaf和min_samples_split是剪枝参数，是减小复杂度的参数
+
+![1](D:\大二下\机器学习\machine-learning\project\slides\image\1.jpg)
+
+![rfc_after_adjust](D:\大二下\机器学习\machine-learning\project\slides\image\rfc_after_adjust.jpg)
 
 ## 名词解释
 
@@ -116,6 +122,3 @@
 7. [使用Adaboost进行分类性能提升](https://blog.csdn.net/weixin_41677876/article/details/106154591?utm_source=app&app_version=4.7.1)
 
 8. [各种机器学习算法的应用场景](https://www.zhihu.com/question/26726794/answer/151282052)
-
-   
-
